fix: left align gallery on smaller screens

--- a/assets/css/sections/content/_plays.scss
+++ b/assets/css/sections/content/_plays.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 100px;
-    padding: 0 40px;
+    padding: 0 10px;
 }
 
 .play-gallery__item {
